@@ -200,6 +200,11 @@ __END__
 
 Term::ANSIColor - Color screen output using ANSI escape sequences
 
+=for stopwords
+cyan colorize namespace TMTOWTDI cmd.exe 4nt.exe command.com NT ESC
+Delvare SSH OpenSSH aixterm ECMA-048 Fraktur overlining Zenin
+reimplemented Allbery
+
 =head1 SYNOPSIS
 
     use Term::ANSIColor;
@@ -404,10 +409,10 @@ rather than a warning.
 =head1 NOTES
 
 The codes generated by this module are standard terminal control codes,
-complying with ECMA-48 and ISO 6429 (generally referred to as "ANSI color"
-for the color codes).  The non-color control codes (bold, dark, italic,
-underline, and reverse) are part of the earlier ANSI X3.64 standard for
-control sequences for video terminals and peripherals.
+complying with ECMA-048 and ISO 6429 (generally referred to as "ANSI
+color" for the color codes).  The non-color control codes (bold, dark,
+italic, underline, and reverse) are part of the earlier ANSI X3.64
+standard for control sequences for video terminals and peripherals.
 
 Note that not all displays are ISO 6429-compliant, or even X3.64-compliant
 (or are even attempting to be so).  This module will not work as expected on
@@ -440,14 +445,14 @@ given attribute as something else instead.  Note that on an aixterm, clear
 doesn't reset colors; you have to explicitly set the colors back to what you
 want.  More entries in this table are welcome.
 
-Note that codes 3 (italic), 6 (rapid blink), and 9 (strikethrough) are
-specified in ANSI X3.64 and ECMA-048 but are not commonly supported by most
-displays and emulators and therefore aren't supported by this module at the
-present time.  ECMA-048 also specifies a large number of other attributes,
-including a sequence of attributes for font changes, Fraktur characters,
-double-underlining, framing, circling, and overlining.  As none of these
-attributes are widely supported or useful, they also aren't currently
-supported by this module.
+Note that codes 3 (italic), 6 (rapid blink), and 9 (strike-through) are
+specified in ANSI X3.64 and ECMA-048 but are not commonly supported by
+most displays and emulators and therefore aren't supported by this module
+at the present time.  ECMA-048 also specifies a large number of other
+attributes, including a sequence of attributes for font changes, Fraktur
+characters, double-underlining, framing, circling, and overlining.  As
+none of these attributes are widely supported or useful, they also aren't
+currently supported by this module.
 
 =head1 SEE ALSO
 
