@@ -1,3 +1,10 @@
+2008-09-14  Russ Allbery  <rra@stanford.edu>
+
+	* t/pod-spelling.t: New check to spell-check POD documentation
+	using ispell with Pod::Spell.
+	* ANSIColor.pm: Fix spelling and markup errors in documentation
+	and add stop-words where appropriate.
+
 2007-04-22  Russ Allbery  <rra@stanford.edu>
 
 	* ANSIColor.pm: Version 1.12 released.
